--- a/travello/package.json
+++ b/travello/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.93.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
